# br-ia-fiscal

./: LICENSE  README.md  client.py  pyproject.toml
ai/: deepseek.py
br_ia_fiscal/: __init__.py  cli.py
br_ia_fiscal/core/: validator.py
schemas/: nfe_v4.00.xsd
