[tool.poetry]
name = "br-ia-fiscal"
version = "0.1.0"
description = "IA para conformidade fiscal brasileira: NF-e, SPED, otimização tributária"
authors = ["Ivan Martins <martinsivan@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/martinsivan/br-ia-fiscal"
repository = "https://github.com/martinsivan/br-ia-fiscal"
keywords = ["fiscal", "nfe", "sped", "ia", "tributario", "brasil"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.8"
lxml = "^5.2"
requests = "^2.32"
httpx = "^0.27"
rich = "^13.7"
typer = {extras = ["all"], version = "^0.12"}
langchain = "^0.1"
langchain-community = "^0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
ruff = "^0.5"
mypy = "^1.10"
mkdocs = "^1.5"
mkdocs-material = "^9.5"
bandit = "^1.7"
safety = "^3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brf = "br_ia_fiscal.cli:app"
