[tool.poetry]
name = "br-ia-fiscal"
version = "0.1.0"
description = "IA completa para conformidade fiscal brasileira"
authors = ["Ivan Martins <martinsivan@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/martinsivan/br-ia-fiscal"
repository = "https://github.com/martinsivan/br-ia-fiscal"
keywords = ["nfe", "fiscal", "ia", "deepseek", "sefaz", "brasil"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Office/Business :: Financial :: Accounting"
]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.8"
lxml = "^5.2"
requests = "^2.32"
httpx = "^0.27"
rich = "^13.7"
typer = {extras = ["all"], version = "^0.12"}
python-dotenv = "^1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
ruff = "^0.5"
mypy = "^1.10"

[tool.poetry.scripts]
brf = "br_ia_fiscal.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
